--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,38 @@
-version: "3"
+version: '3'
+
 services:
   db:
-    image: postgres
-    env_file:
-      - ./.envs/.postgres
+    image: postgres:13.11-alpine3.18
+    environment:
+      POSTGRES_USER: tu_usuario
+      POSTGRES_PASSWORD: tu_contraseña
+      POSTGRES_DB: tu_basededatos
+      TZ: America/Bogota
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
+
   django:
     build:
       context: .
       args:
         UID: "1000"
+    command: python manage.py runserver 0.0.0.0:9000
     restart: always
     tty: true
     volumes:
       - .:/app
-    environment:
-      - DJANGO_ENV=dev
-
     ports:
-      - "8080:8080"
+      - 9000:9000
     depends_on:
       - db
-    networks:
-      default:
-        ipv4_address: 172.40.0.2
-networks:
-  default:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: "172.40.0.0/16"
+    environment:
+      - DJANGO_ENV=dev
+    # networks:
+    #   default:
+    #     ipv4_address: 172.40.0.2
 
 volumes:
-  pgdata:
+  db_data:
+
 
 
